@@ -1,5 +1,6 @@
 package io.mosip.mimoto.service.impl;
 
+import io.mosip.mimoto.constant.SessionKeys;
 import io.mosip.mimoto.dbentity.Wallet;
 import io.mosip.mimoto.dto.WalletResponseDto;
 import io.mosip.mimoto.exception.ErrorConstants;
@@ -8,12 +9,14 @@ import io.mosip.mimoto.repository.WalletRepository;
 import io.mosip.mimoto.service.WalletService;
 import io.mosip.mimoto.util.WalletUtil;
 import io.mosip.mimoto.util.WalletValidator;
+import jakarta.servlet.http.HttpSession;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 /**
  * Implementation of {@link WalletService} for managing wallets.
@@ -34,7 +37,7 @@ public class WalletServiceImpl implements WalletService {
     }
 
     @Override
-    public String createWallet(String userId, String name, String pin, String confirmPin) throws InvalidRequestException {
+    public WalletResponseDto createWallet(String userId, String name, String pin, String confirmPin) throws InvalidRequestException {
         log.info("Creating wallet for user: {}, name: {}", userId, name);
 
         validator.validateUserId(userId);
@@ -48,47 +51,57 @@ public class WalletServiceImpl implements WalletService {
 
         String walletId = walletUtil.createWallet(userId, name, pin);
         log.debug("Wallet created successfully: {}", walletId);
-        return walletId;
-
+        return new WalletResponseDto(walletId, name);
     }
 
     @Override
-    public String getWalletKey(String userId, String walletId, String pin) throws InvalidRequestException {
-        log.info("Retrieving wallet key for user: {}, wallet: {}", userId, walletId);
+    public WalletResponseDto unlockWallet(String walletId, String pin, HttpSession httpSession) throws InvalidRequestException {
+        String userId = (String) httpSession.getAttribute(SessionKeys.USER_ID);
+        log.info("Unlocking wallet for user: {}, wallet: {}", userId, walletId);
 
         validator.validateUserId(userId);
         validator.validateWalletPin(pin);
 
-        return repository.findByUserIdAndId(userId, walletId)
-                .map(wallet -> walletUtil.decryptWalletKey(wallet.getWalletKey(), pin))
-                .orElseThrow(() -> {
-                    log.warn("Wallet not found: {} for user: {}", walletId, userId);
-                    return new InvalidRequestException(ErrorConstants.INVALID_REQUEST.getErrorCode(), "Wallet not found");
-                });
+        Wallet wallet = repository.findByUserIdAndId(userId, walletId)
+                .orElseThrow(getWalletNotFoundExceptionSupplier(userId, walletId));
 
+        String decryptedWalletKey = walletUtil.decryptWalletKey(wallet.getWalletKey(), pin);
+        httpSession.setAttribute(SessionKeys.WALLET_KEY, decryptedWalletKey);
+        httpSession.setAttribute(SessionKeys.WALLET_ID, walletId);
+
+        return new WalletResponseDto(walletId, wallet.getWalletMetadata().getName());
     }
 
     @Override
     public List<WalletResponseDto> getWallets(String userId) {
+        log.debug("validating user ID provided");
+        validator.validateUserId(userId);
+
         log.info("Retrieving wallets for user: {}", userId);
 
-        List<String> walletIds = repository.findWalletIdByUserId(userId);
-        return walletIds.stream()
-                .map(id -> WalletResponseDto.builder().walletId(id).build())
-                .collect(Collectors.toList());
-
+        List<Wallet> wallets = repository.findWalletByUserId(userId);
+        return wallets.stream()
+                .map(wallet -> WalletResponseDto.builder()
+                        .walletId(wallet.getId())
+                        .walletName(wallet.getWalletMetadata().getName())
+                        .build())
+                .toList();
     }
 
     @Override
-    public void deleteWallet(String userId, String walletId) throws InvalidRequestException{
+    public void deleteWallet(String userId, String walletId) throws InvalidRequestException {
         validator.validateUserId(userId);
         Wallet existingWallet = repository.findByUserIdAndId(userId, walletId)
-                .orElseThrow(() -> {
-                    log.warn("Wallet not found: {} for user: {}", walletId, userId);
-                    return new InvalidRequestException(ErrorConstants.INVALID_REQUEST.getErrorCode(), "Wallet not found");
-                });
+                .orElseThrow(getWalletNotFoundExceptionSupplier(userId, walletId));
         repository.delete(existingWallet);
         log.info("Successfully deleted wallet with ID: {} for user: {}", walletId, userId);
+    }
 
+    @NotNull
+    private static Supplier<InvalidRequestException> getWalletNotFoundExceptionSupplier(String userId, String walletId) {
+        return () -> {
+            log.warn("Wallet not found: {} for user: {}", walletId, userId);
+            return new InvalidRequestException(ErrorConstants.INVALID_REQUEST.getErrorCode(), "Wallet not found");
+        };
     }
 }
